modified draft on 9/8/2020

--- a/Assignment-1.html
+++ b/Assignment-1.html
@@ -371,7 +371,8 @@ summary {
 
 <p><em>On this year’s Back to School season, most of public schools worldwide have decided to go remote. Coming from a current context of diaspora and mass migration of young/adult professionals, where sometimes elders are left in charge of their grandchildren, I decided to take a look at similar family scenarios in the U.S. where grandparents are a key factor in making remote-learning feasible for their underage relatives.</em></p>
 <pre class="r"><code>library(tidycensus)
-library(tidyverse)</code></pre>
+library(tidyverse)
+library(dplyr)</code></pre>
 <div id="variables-used" class="section level1">
 <h1>Variables Used</h1>
 <p>For this exercise I used multi-level variables from the <strong>American Community Survey 2018</strong>, adding person-level and household-level data (both from the ACS 1-year data) to eventually generate supporting information on the research question, specifically in the state of <strong>Illinois</strong>.</p>
